data/derived/fa15/progs/unify/prog2141.ml.out
Characters 89-93:
  wwhile (funt, b);;
          ^^^^
Error: This expression has type bool -> bool * int
       but an expression was expected of type bool -> bool * bool
       Type int is not compatible with type bool 
